Removed SesameData class and its usage