@@ -1,3 +1,6 @@
 #!/bin/bash
 
+cd "$( cd "$( dirname "$0" )" && pwd )/.."
+
+export MAVEN_OPTS="-XX:MaxPermSize=128M"
 mvn clean install -P core,emf,graph,rdf,java,neo4j,sesame --fail-at-end
